# quickcurate

./: README.md  pyproject.toml
quickcurate/: __init__.py  cli.py  quickcurate.py
